--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=issue-tracker
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/issues
+spring.datasource.username=springboot
+spring.datasource.password=javaisawesome
+
+logging.level.org.springframework.security=DEBUG
+spring.profiles.active=dev
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+spring.jpa.database=mysql
