--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=issue-tracker
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/issues
+spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=springboot
 spring.datasource.password=javaisawesome
 
