--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=issue-tracker
+server.port=8100
+spring.profiles.active=dev
+
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog
@@ -6,7 +9,7 @@ spring.datasource.username=springboot
 spring.datasource.password=javaisawesome
 
 logging.level.org.springframework.security=DEBUG
-spring.profiles.active=dev
+
 
 
 spring.jpa.hibernate.ddl-auto=create-drop
