--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,18 @@
 spring.application.name=issue-tracker
-server.port=8100
+server.port=${PORT:8100}
 spring.profiles.active=dev
-
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
-spring.datasource.username=springboot
-spring.datasource.password=javaisawesome
 
 logging.level.org.springframework.security=DEBUG
 
-
+# PostgreSQL connection
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.jpa.database=mysql
