--- a/react/.gitignore
+++ b/react/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 node_modules
 dist
 dist-ssr
