added logging config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.profiles.active=dev
 
 logging.level.org.springframework.security=DEBUG
 
+# Logback configuration
+logging.level.root=INFO
+logging.file.name=logs/app.log
+logging.logback.rollingpolicy.clean-history-on-start=true
+
 # PostgreSQL connection
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
