--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### REACT BUILD ###
+src/main/resources/static/*
+
 ### STS ###
 .apt_generated
 .classpath
