build with react working

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+SPRING_PROFILES_ACTIVE=prod
 DATABASE_URL=jdbc:postgresql://localhost:5432/issue_tracker
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
