--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=issue-tracker
 server.port=${PORT:8100}
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
 logging.level.org.springframework.security=DEBUG
 
