updated env variable to get the host for cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=issue-tracker
 server.port=${PORT:8100}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
+# CORS allowed origin for frontend app
+app.security.allowed-origin=${ALLOWED_ORIGINS:http://localhost:8100}
+
 logging.level.org.springframework.security=DEBUG
 
 # Logback configuration
