--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 # CORS allowed origin for frontend app
 app.security.allowed-origin=${ALLOWED_ORIGINS:http://localhost:8100}
 
+# JWT Configuration
+app.jwt.secret=eM0zH3gUi0bPB6f1ETZeAQy+7i0sl5SOjv265/lq6e4=
+app.jwt.refresh.secret=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
+# JWT expiration time in milliseconds (24 hours)
+app.jwt.expiration=10000
+# 7 days in milliseconds
+app.refresh.expiration=604800000
 
 
 logging.level.org.springframework.security=DEBUG
