--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ SPRING_PROFILES_ACTIVE=prod
 DATABASE_URL=jdbc:postgresql://localhost:5432/issue_tracker
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
-ALLOWED_ORIGINS=http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173, http://localhost:8100
 PORT=8100
