--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,24 @@ app.refresh.expiration=604800000
 
 
 logging.level.org.springframework.security=DEBUG
+logging.level.web=DEBUG
+logging.level.app=DEBUG
 
 # Logback configuration
 logging.level.root=INFO
 logging.file.name=logs/app.log
 logging.logback.rollingpolicy.clean-history-on-start=true
+
+# SQL Debugging
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Error details
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+server.error.include-exception=true
 
 # PostgreSQL connection
 spring.datasource.url=${DATABASE_URL}
