updated application.prop added comment to not forget that jwt exp is 10 sec for test purposes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ app.security.allowed-origin=${ALLOWED_ORIGINS:http://localhost:8100}
 app.jwt.secret=eM0zH3gUi0bPB6f1ETZeAQy+7i0sl5SOjv265/lq6e4=
 app.jwt.refresh.secret=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
 # JWT expiration time in milliseconds (24 hours)
+# 10 seconds for testing
 app.jwt.expiration=10000
 # 7 days in milliseconds
 app.refresh.expiration=604800000
