Update JWT secret configuration to use environment variables

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
 ALLOWED_ORIGINS=http://localhost:5173, http://localhost:8100
 PORT=8100
+JWT_SECRET=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
+JWT_REFRESH_SECRET=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
