--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 app.security.allowed-origin=${ALLOWED_ORIGINS:http://localhost:8100}
 
 # JWT Configuration
-app.jwt.secret=eM0zH3gUi0bPB6f1ETZeAQy+7i0sl5SOjv265/lq6e4=
-app.jwt.refresh.secret=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
+app.jwt.secret=${JWT_SECRET}
+app.jwt.refresh.secret=${JWT_REFRESH_SECRET}
 # JWT expiration time in milliseconds (24 hours)
 # 10 seconds for testing
 app.jwt.expiration=10000
