--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-SPRING_PROFILES_ACTIVE=prod
+SPRING_PROFILES_ACTIVE=dev
 DATABASE_URL=jdbc:postgresql://localhost:5432/issue_tracker
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=root
 ALLOWED_ORIGINS=http://localhost:5173, http://localhost:8100
 PORT=8100
-JWT_SECRET=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
-JWT_REFRESH_SECRET=aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M=
+JWT_SECRET="aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M="
+JWT_REFRESH_SECRET="aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M="
 JWT_EXPIRATION=10000
 REFRESH_EXPIRATION=604800000
