--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ app.jwt.secret=${JWT_SECRET}
 app.jwt.refresh.secret=${JWT_REFRESH_SECRET}
 # JWT expiration time in milliseconds (24 hours)
 # 10 seconds for testing
-app.jwt.expiration=${JWT_EXPIRATION:86400000}
+app.jwt.expiration=${JWT_EXPIRATION:900000}
 # 7 days in milliseconds
 app.refresh.expiration=${REFRESH_EXPIRATION:604800000}
 
