uploading image implemented but needs to be updated

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ ALLOWED_ORIGINS=http://localhost:5173, http://localhost:8100
 PORT=8100
 JWT_SECRET="aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M="
 JWT_REFRESH_SECRET="aWbAYdfEXJBFdw0ITgep1vbLZbW+uLQ9C9ETTXkkc1M="
-JWT_EXPIRATION=10000
+JWT_EXPIRATION=9000000
 REFRESH_EXPIRATION=604800000
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
