--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Thumbnailator (image compression & resizing) -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.20</version>
+		</dependency>
+
 		<!-- Validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
